--- a/src/view/RootLayout.fxml
+++ b/src/view/RootLayout.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -9,10 +10,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.181" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.RootLayoutController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.RootLayoutController">
    <center>
-      <ImageView fitHeight="600.0" fitWidth="1200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER_LEFT">
+      <ImageView fx:id="imageView" fitHeight="578.0" fitWidth="1200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets />
          </BorderPane.margin>
@@ -29,7 +31,7 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
-              <MenuItem mnemonicParsing="false" text="Reset" />
+              <MenuItem fx:id="reset" mnemonicParsing="false" text="Reset" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
@@ -43,9 +45,20 @@
    <bottom>
       <AnchorPane prefHeight="200.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
          <children>
-            <TextArea fx:id="textArea" editable="false" layoutX="467.0" prefHeight="186.0" prefWidth="718.0" text="Text:" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
-            <Button fx:id="digitizeButton" layoutX="46.0" layoutY="47.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="165.0" text="Digitize" />
-            <Button fx:id="decryptButton" layoutX="238.0" layoutY="47.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="165.0" text="Decrypt" />
+            <TextArea fx:id="textArea" editable="false" layoutX="467.0" prefHeight="186.0" prefWidth="718.0" promptText="Nothing to display." AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="35.0" />
+            <Button fx:id="digitizeButton" layoutX="43.0" layoutY="45.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="165.0" text="Digitize" />
+            <Button fx:id="decryptButton" layoutX="239.0" layoutY="45.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="165.0" text="Decrypt" />
+            <Label fx:id="textLabel" layoutX="468.0" layoutY="14.0" text="Text:" />
+            <Label layoutX="22.0" layoutY="166.0" text="Status:">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="statusLabel" layoutX="81.0" layoutY="166.0" text="Label">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </bottom>
