--- a/src/view/RootLayout.fxml
+++ b/src/view/RootLayout.fxml
@@ -21,7 +21,7 @@
       </ImageView>
    </center>
    <top>
-      <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
+      <MenuBar fx:id="menuBar" accessibleText="OCR-Decrypter" BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
