--- a/src/view/RootLayout.fxml
+++ b/src/view/RootLayout.fxml
@@ -25,7 +25,6 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-                  <MenuItem fx:id="selectFile" mnemonicParsing="false" text="Select File" />
               <MenuItem fx:id="close" mnemonicParsing="false" text="Close" />
             </items>
           </Menu>
@@ -46,8 +45,8 @@
       <AnchorPane prefHeight="200.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
          <children>
             <TextArea fx:id="textArea" editable="false" layoutX="467.0" prefHeight="186.0" prefWidth="718.0" promptText="Nothing to display." AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="35.0" />
-            <Button fx:id="digitizeButton" layoutX="43.0" layoutY="45.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="165.0" text="Digitize" />
-            <Button fx:id="decryptButton" layoutX="239.0" layoutY="45.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="165.0" text="Decrypt" />
+            <Button fx:id="digitizeButton" layoutX="43.0" layoutY="95.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="165.0" text="Digitize" />
+            <Button fx:id="decryptButton" layoutX="239.0" layoutY="95.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="165.0" text="Decrypt" />
             <Label fx:id="textLabel" layoutX="468.0" layoutY="14.0" text="Text:" />
             <Label layoutX="22.0" layoutY="166.0" text="Status:">
                <font>
@@ -59,6 +58,8 @@
                   <Font size="16.0" />
                </font>
             </Label>
+            <Button fx:id="selectFile" layoutX="44.0" layoutY="32.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="165.0" text="Select File" />
+            <Button fx:id="insertText" layoutX="240.0" layoutY="32.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="165.0" text="Insert Text" />
          </children>
       </AnchorPane>
    </bottom>
