--- a/src/view/RootLayout.fxml
+++ b/src/view/RootLayout.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
@@ -44,22 +45,34 @@
    <bottom>
       <AnchorPane prefHeight="200.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
          <children>
-            <TextArea fx:id="textArea" editable="false" layoutX="467.0" prefHeight="186.0" prefWidth="718.0" promptText="Nothing to display." AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="35.0" />
-            <Button fx:id="digitizeButton" layoutX="43.0" layoutY="95.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="165.0" text="Digitize" />
-            <Button fx:id="decryptButton" layoutX="239.0" layoutY="95.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="165.0" text="Decrypt" />
-            <Label fx:id="textLabel" layoutX="468.0" layoutY="14.0" text="Text:" />
-            <Label layoutX="22.0" layoutY="166.0" text="Status:">
+            <Label layoutX="46.0" layoutY="10.0" text="Language Option:" AnchorPane.leftAnchor="50.0">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label fx:id="statusLabel" layoutX="81.0" layoutY="166.0" text="Label">
+            <TextArea fx:id="textArea" editable="false" layoutX="412.0" layoutY="33.0" prefHeight="127.0" prefWidth="738.0" promptText="Nothing to display." AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="33.0" />
+            <Button fx:id="digitizeButton" layoutX="45.0" layoutY="116.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="165.0" text="Digitize" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="125.0" />
+            <Button fx:id="decryptButton" layoutX="219.0" layoutY="115.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="165.0" text="Decrypt" AnchorPane.leftAnchor="224.0" AnchorPane.topAnchor="125.0" />
+            <Label fx:id="textLabel" layoutX="413.0" layoutY="14.0" text="Text:" />
+            <Label layoutX="51.0" layoutY="168.0" text="Status:">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Button fx:id="selectFile" layoutX="44.0" layoutY="32.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="165.0" text="Select File" />
-            <Button fx:id="insertText" layoutX="240.0" layoutY="32.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="165.0" text="Insert Text" />
+            <Label fx:id="statusLabel" layoutX="113.0" layoutY="168.0" text="Label">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Button fx:id="selectFile" layoutX="45.0" layoutY="54.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="165.0" text="Select File" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="65.0" />
+            <Button fx:id="insertText" layoutX="219.0" layoutY="54.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="165.0" text="Insert Text" AnchorPane.leftAnchor="224.0" AnchorPane.topAnchor="65.0" />
+            <MenuButton fx:id="menu" layoutX="45.0" layoutY="33.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="339.0" text="Language" AnchorPane.leftAnchor="50.0">
+              <items>
+                <MenuItem fx:id="englishOption" mnemonicParsing="false" text="English" />
+                <MenuItem fx:id="koreanOption" mnemonicParsing="false" text="Korean" />
+                  <MenuItem fx:id="chineseOption" mnemonicParsing="false" text="Chinese" />
+              </items>
+            </MenuButton>
          </children>
       </AnchorPane>
    </bottom>
